@@ -1,1 +1,12 @@
 <gp-user-top-nav-bar>Loading...</gp-user-top-nav-bar>
+
+<!-- Sign Up Body -->
+<div class="container d-flex justify-content-center my-5">
+    <!-- Top Text -->
+    <div class="d-flex flex-column">
+        <p class="fs-2 fw-bolder text-dark gp__sign-up-body text-center mb-0">Sign In</p>
+        <p class="text-center">New here? <a routerLink="../user-registration" class="gp__link">Sign Up</a></p>
+        <!-- Phone Number Component Here -->
+        <gp-sign-in-mobile-number>Loading...</gp-sign-in-mobile-number>
+    </div>
+</div>
