@@ -1,0 +1,35 @@
+.form-control {
+  background-color: #f3f6f9;
+  border: none;
+  border-radius: 0;
+}
+
+.input-group-prepend {
+  background-color: #f3f6f9;
+  border: none;
+  border-radius: 0;
+  padding: 1rem;
+}
+
+.gp__sign-up-icon {
+  width: 24px;
+  height: 24px;
+  fill: #919ca1;
+}
+
+.btn {
+  background-color: #e4e8eb;
+  height: 3rem;
+  color: #919ca1;
+  font-size: 20px;
+  border-radius: 8px;
+}
+
+.form-control:focus {
+  border: none;
+  border-bottom: #00a4ff;
+}
+
+.droptown-toggle {
+  width: 75px;
+}
