@@ -1,0 +1,25 @@
+<form>
+    <div class="input-group mt-3">
+        <div class="input-group-prepend">
+            <svg xmlns="input-group-text px-2 py-0" viewBox="0 0 24 24" role="img" aria-hidden="true"
+                class="gp__sign-up-icon">
+                <path
+                    d="M17.25,18H6.75V4H17.25M14,21H10V20H14M16,1H8A3,3 0 0,0 5,4V20A3,3 0 0,0 8,23H16A3,3 0 0,0 19,20V4A3,3 0 0,0 16,1Z">
+                </path>
+            </svg>
+
+            <button class="btn dropdown-toggle bg-white h-100 py-1" type="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">+1</button>
+            <div class="dropdown-menu">
+                <a class="dropdown-item active">+1</a>
+                <a class="dropdown-item">+33</a>
+                <a class="dropdown-item">+34</a>
+                <a class="dropdown-item">+44</a>
+                <a class="dropdown-item">Intl.</a>
+            </div>
+        </div>
+        <input type="text" class="form-control" placeholder="Mobile Number" aria-label="Mobile Number"
+            aria-describedby="sign-up-email">
+    </div>
+    <button type="submit" class="btn gp__next-btn w-100 px-2 py-0 mt-4 fw-bolder">Next</button>
+</form>
