@@ -1,0 +1,15 @@
+import { Component, OnInit } from '@angular/core';
+
+@Component({
+  selector: 'gp-sign-in-mobile-number',
+  templateUrl: './sign-in-mobile-number.component.html',
+  styleUrls: ['./sign-in-mobile-number.component.css']
+})
+export class SignInMobileNumberComponent implements OnInit {
+
+  constructor() { }
+
+  ngOnInit(): void {
+  }
+
+}
